syntax = "proto3";

package oauth;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "oauth.v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTPS;
  host: "yyuck.com";
  base_path: "/oauth.ClientService";
};

service ClientService {
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/clients"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/clients/{id}"
    };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/clients",
      body: "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/clients/{id}",
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/clients/{id}",
    };
  }
}

// 抽签类型
enum Type {
  // 个数
  NUMBER = 0;
  // 几率
  PERCENT = 1;
}

// Lottery item
message Item {
  string name = 1; // oauth title
  int32 value = 2; // oauth summary
}
// Lottery item
message Remark {
  string name = 1; // oauth title
  bool require = 2; // oauth summary
}

// Lottery item
message Lottery {
  int32 id = 1; // id
  string title = 2; // oauth title
  Type type = 3; // oauth image
  repeated Item items = 4;
  bool remark = 5; // oauth summary
  repeated Remark remarks = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message NewLottery {
  string title = 1; // oauth title
  Type type = 2; // oauth image
  repeated Item items = 3; // oauth image
  bool remark = 4; // oauth summary
  repeated Remark remarks = 5; // oauth summary
}

message ListRequest {}
message ListResponse {
  repeated Lottery clients = 1;
}

message GetRequest {
  int32 id = 1;
}
message GetResponse {
  Lottery oauth = 1;
}

message CreateRequest {
  NewLottery oauth = 1;
}
message CreateResponse {
  Lottery oauth = 1;
}

message UpdateRequest {
  int32 id = 1;
  NewLottery oauth = 2;
}
message UpdateResponse {
  Lottery oauth = 1;
}

message DeleteRequest {
  int32 id = 1;
}
message DeleteResponse {
}
